# docs/swagger.json
@@ -7,44 +7,40 @@
         "version": "0.1"
     },
     "paths": {
-        "/hello": {
-            "get": {
-                "description": "Возвращает json \"hello world\"",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Test"
-                ],
-                "summary": "Тестовый эндпоинт для проверки работы автодокументации",
-                "operationId": "hello",
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                }
-            }
-        },
         "/login/": {
-            "get": {
-                "description": "Возвращает пару токенов - access и refresh токен или json с ошибкой",
+            "post": {
+                "description": "Необходим либо логин, либо email.\nВ случае, если предоставлены оба поля приоритет будет у логина.\nВозвращает пару токенов - access и refresh токен или json с ошибкой",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Аутентификация пользователя по логину и паролю",
+                "summary": "Аутентификация пользователя по логину или email и паролю",
                 "operationId": "auth-login",
+                "parameters": [
+                    {
+                        "description": "json запроса:",
+                        "name": "Request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HandleLoginRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HandleLoginResponse"
+                        }
                     },
-                    "404": {
-                        "description": "Not Found"
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.HttpErrorResponse"
+                        }
                     }
                 }
             }
@@ -65,12 +61,12 @@
                 "operationId": "auth-register",
                 "parameters": [
                     {
-                        "description": "json пользователя",
-                        "name": "user",
+                        "description": "json пользователя:",
+                        "name": "Request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/examples.CreateUserExample"
+                            "$ref": "#/definitions/handlers.HandleRegisterRequest"
                         }
                     }
                 ],
@@ -78,7 +74,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/examples.PublicUserExample"
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "400": {
@@ -92,20 +88,25 @@
         }
     },
     "definitions": {
-        "examples.CreateUserExample": {
+        "handlers.HandleLoginRequest": {
             "type": "object",
             "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "aboba@gmail.com"
-                },
-                "id": {
+                "app_id": {
                     "type": "string",
                     "example": "1"
                 },
+                "client_id": {
+                    "type": "string",
+                    "example": "1"
+                },
+                "email": {
+                    "description": "either email or username should not be empty",
+                    "type": "string",
+                    "example": "aboba@gmail.ru"
+                },
                 "password": {
                     "type": "string",
-                    "example": "aboba32"
+                    "example": "qwerty123456"
                 },
                 "username": {
                     "type": "string",
@@ -113,16 +114,24 @@
                 }
             }
         },
-        "examples.PublicUserExample": {
+        "handlers.HandleLoginResponse": {
+            "type": "object",
+            "properties": {
+                "refresh_token": {
+                    "$ref": "#/definitions/models.RefreshToken"
+                }
+            }
+        },
+        "handlers.HandleRegisterRequest": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string",
                     "example": "aboba@gmail.com"
                 },
-                "id": {
+                "password": {
                     "type": "string",
-                    "example": "1"
+                    "example": "aboba32"
                 },
                 "username": {
                     "type": "string",
@@ -140,6 +149,49 @@
                 "error": {
                     "type": "string",
                     "example": "something went wrong..."
+                }
+            }
+        },
+        "models.RefreshToken": {
+            "type": "object",
+            "properties": {
+                "app_id": {
+                    "type": "string",
+                    "example": "1"
+                },
+                "client_id": {
+                    "type": "string",
+                    "example": "1"
+                },
+                "expires_at": {
+                    "description": "unixtime",
+                    "type": "integer",
+                    "example": 1691407740
+                },
+                "token": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "1"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "aboba@gmail.com"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "107"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "aboba"
                 }
             }
         }
