# internal/models/auth.go
@@ -1,6 +1,8 @@
 package models
 
 import (
+	"time"
+
 	validation "github.com/go-ozzo/ozzo-validation"
 )
 
@@ -10,6 +12,10 @@ type RefreshToken struct {
 	UserId    string `json:"user_id" example:"1"`
 	Token     string `json:"token" example:"550e8400-e29b-41d4-a716-446655440000"`
 	ExpiresAt int64  `json:"expires_at" example:"1691407740"` // unixtime
+}
+
+func (token RefreshToken) IsExpired() bool {
+	return token.ExpiresAt <= time.Now().Unix()
 }
 
 type Application struct {
